# draind

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  PKGBUILD  README.md  draind.install
config/: draind-agent.json  draind-agent.service  draind-sysusers.conf  draind.install  draind.json  draind.service  logind-draind.conf
docs/: architecture.md  protocol.md
protocols/: wlr-output-power-management-unstable-v1.xml
src/agent/: agent.cpp  agent.hpp  agent_config.cpp  agent_config.hpp  idle_monitor.hpp  input_idle_monitor.cpp  input_idle_monitor.hpp  main.cpp  mpris_monitor.cpp  mpris_monitor.hpp  wayland_idle_monitor.cpp  wayland_idle_monitor.hpp  wayland_output_power.cpp  wayland_output_power.hpp
src/ctl/: main.cpp
src/daemon/: config_manager.cpp  config_manager.hpp  daemon.cpp  daemon.hpp  hw_event_monitor.cpp  hw_event_monitor.hpp  main.cpp  power_manager.cpp  power_manager.hpp  server.cpp  server.hpp  session_tracker.cpp  session_tracker.hpp
src/shared/: battery.hpp  config.cpp  config.hpp  json.hpp  logger.hpp  protocol.hpp  socket.cpp  socket.hpp
